feat: add App page
